terraform/roots/kubernetes-bootstrap/kube-prometheus/kube-prometheus/manifests/pyrra-kubernetesService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kubernetes
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.5.1
  name: pyrra-kubernetes
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9444
    targetPort: 9444
  selector:
    app.kubernetes.io/component: kubernetes
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
